# casaquant-unified

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_init_schema.py  001_init_schema.sql  002_portfolio_enrich.py  002_portfolio_enrich.sql
app/: config.py  dependencies.py  main.py
app/domains/ai/: gateway.py  models.py
app/domains/backtest/: models.py  routes.py  tasks.py  v4_engine.py  v7_engine.py
app/domains/common/: db.py  fees.py
app/domains/market/: models.py  repository.py  routes.py
app/domains/pipeline/: models.py  recalc.py  routes.py  tasks.py
app/domains/portfolio/: finance.py  models.py  repository.py  routes.py  service.py
app/domains/scoring/: engine.py  indicators.py  models.py  routes.py
app/domains/scraping/: guardrails.py  repository.py  service.py  tasks.py
app/domains/scraping/adapters/: casabourse.py  wafabourse.py
app/static/src/: main.js  styles.css
tests/unit/: test_ai_gateway.py  test_fees.py  test_guardrails.py  test_indicators.py  test_portfolio_finance.py  test_scoring.py  test_strategy_v7.py
