[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casaquant-unified"
version = "3.0.0"
description = "CasaQuant — Application unifiée d'analyse quantitative BVC/MASI"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Abderrahim", email = "author@example.com"},
]
keywords = ["bvc", "masi", "quantitative", "trading", "morocco"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web
    "fastapi>=0.115.0,<0.120.0",
    "uvicorn[standard]>=0.30.0,<0.35.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    # Data / ORM
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.5.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0,<0.28.0",
    # Data Science
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.13.0,<2.0.0",
    # Scraping
    "playwright>=1.45.0",
    "requests>=2.32.0,<3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Task Queue
    "celery>=5.4.0,<6.0.0",
    "redis>=5.0.0",
    # Excel
    "openpyxl>=3.1.0,<4.0.0",
    # Scheduling / Config
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    # Observability
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    # Misc
    "holidays>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-requests",
    "types-openpyxl",
]

[project.scripts]
casaquant-api = "app.main:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: marque les tests unitaires rapides",
    "integration: marque les tests d'intégration (base de données)",
    "slow: marque les tests lents (backtest, scraping)",
    "e2e: marque les tests end-to-end (Playwright)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
